updated alignment of navbar and fixed bug in dietitian sign up

--- a/frontend-react-app/src/components/shared_components/navbar/scss/AboutDropDown.module.scss
+++ b/frontend-react-app/src/components/shared_components/navbar/scss/AboutDropDown.module.scss
@@ -10,7 +10,7 @@
 }
 .clientDropDownContainer {
   align-items: center;
-  column-gap: 3vh;
+  // column-gap: 3vh;
   cursor: pointer;
   @include theme.xs {
     column-gap: 0.3vh;
